Fixed some import things

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
         "sourceMap": true,
         "outDir": "out",
         "lib": ["es2015", "dom"],
-        "target": "es5"
+        "target": "es5",
+        "resolveJsonModule": true,
+        "baseUrl": ".",
+        "paths": {
+            "wildflower/*": ["./wildflower/*"]
+        }
     }
 }
