--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "net.lugocorp.wildflower",
-  "displayName": "Wildflower App",
+  "name": "com.example.app",
+  "displayName": "Some Wildflower App",
   "version": "1.0.0",
   "description": "An app built on the Wildflower platform",
   "scripts": {
     "build": "webpack",
     "lint": "eslint src",
-    "start": "webpack serve --port 2017"
+    "start": "webpack serve"
   },
   "keywords": [
     "ecosystem:cordova"
   ],
-  "license": "Apache-2.0",
+  "license": "GPLv3",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
