Moved tooling scripts to a dedicated folder

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack",
     "lint": "eslint src",
     "start": "webpack serve",
-    "upgrade": "node upgrade.js"
+    "upgrade": "node scripts/upgrade.js"
   },
   "keywords": [
     "ecosystem:cordova"
