--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "description": "An app built on the Wildflower platform",
   "scripts": {
-    "build": "webpack",
-    "lint": "eslint src",
-    "start": "webpack serve",
-    "upgrade": "node scripts/upgrade.js"
+    "build": "node scripts/testing.js",
+    "start": "node scripts/testing.js serve",
+    "upgrade": "node scripts/upgrade.js",
+    "lint": "eslint src"
   },
   "keywords": [
     "ecosystem:cordova"
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "cordova": "^11.0.0",
+    "cordova-browser": "^6.0.0",
     "eslint": "^8.6.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
@@ -24,8 +25,9 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.7.3"
   },
-  "dependencies": {},
   "cordova": {
-    "platforms": []
+    "platforms": [
+      "browser"
+    ]
   }
 }
