--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "com.example.app",
+  "name": "net.lugocorp.wildflower",
   "displayName": "Some Wildflower App",
   "version": "1.0.0",
   "description": "An app built on the Wildflower platform",
   "scripts": {
+    "wildflower:document": "typedoc wildflower --media media",
+    "wildflower:lint": "eslint wildflower",
     "build": "node scripts/testing.js",
     "start": "node scripts/testing.js serve",
     "upgrade": "node scripts/upgrade.js",
@@ -20,6 +22,7 @@
     "cordova-browser": "^6.0.0",
     "eslint": "^8.6.0",
     "ts-loader": "^9.2.6",
+    "typedoc": "^0.23.15",
     "typescript": "^4.5.4",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
